# ros2_fastdds_playground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
config/: default.rviz  fastdds_multicast.xml  fastdds_multicast_all_subscribers.xml  fastdds_shm.xml  fastdds_udp.xml  fastdds_udp_with_datashare.xml  fastdds_udp_with_partition.xml
docker/: ros2_command.sh  ros2_environment.dockerfile
src/heavy_publish_py/: package.xml  setup.cfg  setup.py
src/heavy_publish_py/heavy_publish_py/: heavy_images.py
src/heavy_subscribe_py/: package.xml  setup.cfg  setup.py
src/playground_interfaces/: CMakeLists.txt  package.xml
src/playground_interfaces/msg/: StaticFloat32ArrayLarge.msg  StringWithHeader.msg
src/playground_interfaces/srv/: RunFakeTask.srv
src/playground_publish_py/: package.xml  setup.cfg  setup.py
src/playground_publish_py/playground_publish_py/: heavy_pub_node.py  qos_pub_node.py
src/playground_services_py/: package.xml  setup.cfg  setup.py
src/playground_services_py/playground_services_py/: service_node.py
src/scenarios_py/: package.xml  setup.cfg  setup.py
src/scenarios_py/launch/: all.launch.py  heavy_pub.launch.py  one_pub_one_sub.launch.py  qos_pub.launch.py  services.launch.py
